# obsi-css-diff

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
archive/: old_main.py
obsi_diff/: __main__.py  cli.py
obsi_diff/sources/: docker_hub.py  electron.py  rss.py
