[project]
name = "obsi-css-diff"
version = "0.1.0"
description = "Manage Obsidian Docker versions and extract app.css"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "textual",
    "typer",
    "docker>=7.0.0",
    "feedparser>=6.0.12",
]

[dependency-groups]
dev = [
    "ruff>=0.1.9",
    "pre-commit>=3.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
